syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.bytes.jtim.core.protocol.protobuf";

message AuthRequest {
    //认证token
    string token = 1;
    //用户id
    string uid = 2;
    //发包时间
    int64 timestamp = 3;
}

message AuthResponse {
    enum Status {
        OK = 0;
        ERR = -1;
    }

    int32 status = 1;
    //错误编码
    string err_code = 2;
    //错误描述
    string err_msg = 3;
}


message LogoutRequest {
    string token = 1;
    string uid = 2;
    int64 timestamp = 3;
}

message LogoutResponse {

}